# tootsies

./: .coverage  .env.example  .gitignore  .log-monitor-state.json  CHANGELOG.md  CLAUDE.md  Dockerfile  EXECUTION_PLAN.md  README.md  bot.py  claude_client.py  config.py  constitution.py  db.py  models.py  persona.py  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
.claude/hooks/: session-start.sh
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  close-on-deploy.yml  command-eval.yml  log-monitor.yml  ops-monitor.yml  sync-order-on-close.yml
announcements/: market-features.md
cogs/: admin.py  ask.py  chimein.py  chipin.py  discourse.py  girls.py  help.py  ignore.py  logs.py  memory.py  music.py  order.py  recap.py  settings.py  squad.py
docs/: ALGORITHMS.md  _config.yml  index.md  perplexity-handoff.md
docs/assets/: README.md
docs/assets/css/: style.scss
evals/: README.md  eval_announcement_examples.py  eval_ask.py  eval_kalshi_discovery.py
scripts/: eval_commands.py  eval_memory_fence.py  eval_music_post.py  eval_perplexity_params.py  generate_help_examples.py  log_monitor.py  ops_monitor.py  update_order_status.py
tests/: conftest.py  test_abuse_tracker.py  test_apple_music.py  test_ask_grounding.py  test_ask_replies.py  test_async_cache.py  test_bot_logs.py  test_chimein.py  test_chipin.py  test_claude_client.py  test_commands.py  test_db.py  test_dedup.py  test_discourse_skip.py  test_eval_commands.py  test_events.py  test_feeds.py  test_girls.py  test_github.py  test_link_enrich.py  test_log_monitor.py  test_long_message.py  test_markets.py  test_memory.py  test_metrics.py  test_music.py  test_ops_monitor.py  test_permissions.py  test_perplexity.py  test_persona.py  test_preflight.py  test_railway.py  test_railway_methods.py  test_rate_limits.py  test_reactions.py  test_recap.py  test_retry.py  test_smoke.py  test_url_guardrail.py
tests/fixtures/: bluesky_sample.json  fxtwitter_sample.json  reddit_sample.json  sample_logs.json  tikwm_sample.json  youtube_oembed_sample.json
utils/: abuse_tracker.py  apple_music.py  async_cache.py  bot_logs.py  dedup.py  events.py  feeds.py  gates.py  github.py  healthcheck.py  link_enrich.py  long_message.py  markets.py  metrics.py  music_links.py  permissions.py  perplexity.py  railway.py  rate_limits.py  reactions.py  url_guardrail.py  voice.py
