[project]
name = "tootsies"
version = "0.1.0"
description = "Toots — a Discord bot for the Tootsies server"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
# Discord.py + asyncpg are heavily dynamic — keep mypy loose enough to be useful, not noisy.
disable_error_code = ["misc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
# Coverage gate. CI fails if a change drops total below this threshold.
# Ratchet up over time as more cogs get unit coverage.
# Coverage gate. CI fails if a change drops below this floor.
# Ratchet up over time. NEVER lower this number without justification — the only
# correct direction is up.
addopts = "--cov=. --cov-report=term --cov-fail-under=40"

[tool.coverage.run]
omit = [
    ".venv/*",
    "tests/*",
    "*/__init__.py",
    "bot.py",  # async entrypoint, exercised only via integration
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
